Prevent horizontal scrolling to the message panel.

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+body {
+  overflow: hidden;
+}
+
 h2 {
   font-size: 1.5rem;
   margin: 1rem 0;
